@@ -1,5 +1,11 @@
 2006-04-14  Ross Burton  <ross@burtonini.com>
 
+	* src/gsttaglib.cc:
+	* src/gsttaglib.h:
+	Re-namespace to avoid conflicting with the real taglibmux.
+
+2006-04-14  Ross Burton  <ross@burtonini.com>
+
 	* src/sj-main.c:
 	Ensure the window title is reset when we read a CD (#337566).
 
